src/style-mfirst.css
/* ... */
#app {
    /* position: fixed; */
    top: 0;
    left: 0;
    width: 100%;
    /* visibility: hidden; */
    will-change: transform, opacity;
}

#app.loaded {
    position: static;
    /* overflow: hidden; */
}

home-page,
about-page {
    display: block;
    will-change: transform, opacity;
}

.logo {
    img {
        /* height: 3vw; */
        height: clamp(36px, 3vw, calc(var(--g-header-height) / 2));
        width: auto;
    }
}

.divider-line {
    display: flex;
    align-items: center;
}

.dynamic-section {
    background: var(--p-clr-white);
    color: var(--p-clr-black);
}

.footer-section {
    position: relative;
    min-height: 100svh;
    background: var(--p-clr-gradient-1);

    .footer-content {
        position: relative;
        top: var(--g-header-height);
        gap: 1rem;

        .footer-cta {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: space-between;
            /* gap: 2em; */
            margin-bottom: 5em;
            /* border: 1px dashed yellow; */

            .cgi {
                /* border: 1px dashed yellow; */
            }

            .footer-cta-second {
                display: flex;
                flex-direction: column;
                align-items: center;
                text-align: center;
                gap: 2em;
                /* border: 1px dashed yellow; */
            }

            @media (width > 760px) {
                flex-direction: row-reverse;
                
                .footer-cta-second {
                    align-items: start;
                    text-align: left;
                    gap: 2em;
                }
            }
        }

        .footer-info {
            a {
                text-decoration: none;
            }
        }

        
    }
}

.footer-col {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.grid-equal-columns {
    display: grid;
    gap: var(--equal-columns-gap, 1rem);

    @media (width > 760px) {
        grid-auto-flow: column;
        grid-auto-columns: 1fr;
    }
}

.grid-auto-fit {
    --auto-fit-min-col-size: 300px;
    display: grid;
    /* gap: 1rem; */
    grid-template-columns: repeat(
        auto-fit,
        minmax(min(var(--auto-fit-min-col-size), 100%), 1fr)
    );
}

.equal-columns {
    display: grid;
    gap: var(--equal-columns-gap, 1rem);
    align-items: var(--equal-columns-vertical-alignment, stretch);

    @media (width > 760px) {
        grid-auto-flow: column;
        grid-auto-columns: 1fr;
    }

    &[data-gap="large"] {
        --equal-columns-gap: 2rem;
    }

    &[data-alignment="centered"] {
        --equal-columns-vertical-alignment: center;
    }
}

